release 0.9 (2008-08-15)
- JAXB un/marshalling will use any ContextResolver<Un/Marshaller>
  instances, if present, otherwise, if not present un/marshalling will use
  ContextResolver<JAXBContext>, if present. The @Produces scope will be
  taken into account.
- Set the Content-Length, if known, in automatic response to a HEAD request 
  that defers to the @GET annotated resource method.
- Fixed issue where a message body reader is not correctly selected for 
  a media type that contains parameters.
- Server-side request filter for HTTP POST method replacing for proxies and
  servers that block methods other than GET/POST.
  See JavaDoc of:
  com.sun.jersey.api.container.filter.PostReplaceFilter
- Support server side request/response filters
  See JavaDoc of:
  com.sun.jersey.spi.container.ContainerRequestFilter
  com.sun.jersey.spi.container.ContainerResponseFilter
  ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS
  ResourceConfig.PROPERTY_CONTAINER_RESPONSE_FILTERS
- Select the constructor for a resource classe that has the most parameters
  that has the most instances are available for those parameters.
- Support constructors with parameters on singleton resource classes.
- Fixed issue 79
  https://jersey.dev.java.net/issues/show_bug.cgi?id=79
  ';' separated package names and classpaths specified in the web.xml are
  trimmed.
- Integrated JSR 311 API 0.9
  - Path parameters match 1 or more characters that are not '/' 
    (previously it was zero or more of any character), unless the final 
     parameter is unlimited, in which case it is the same as before.
  - Path parameter names are matching with the following regex:
      "\{([\w[-\w\.]*)\}"
  - com.sun.jersey.api.representation.FormParam has been deleted. Use
    javax.ws.rs.FormParam instead.
  - javax.ws.rs.ConsumeMime and javax.ws.rs.ProduceMime have been renamed
    to javax.ws.rs.Consumes and javax.ws.rs.Produces respectively.
  - Resource methods may return generic types, such as List<String>, and