@@ -1,4 +1,8 @@
 release 0.9 (2008-08-15)
+- Fixed issue 87
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=87
+  A message body writer may modify the http headers before any bytes
+  are written to the output stream.
 - JAXB un/marshalling will use any ContextResolver<Un/Marshaller>
   instances, if present, otherwise, if not present un/marshalling will use
   ContextResolver<JAXBContext>, if present. The @Produces scope will be
